fixed navbar elements alignment using vh properties

--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -2,7 +2,7 @@
   /* REMOVE MARGINS once the correct picture is imported */
   margin-left: -10px;
   margin-right: 5px;
-  max-height: 40px;
+  max-height: calc(var(--vh, 1vh) * 6);
   width: auto;
 }
 
@@ -13,15 +13,11 @@
 }
 
 .navbar-brand {
+  padding-top: calc(var(--vh, 1vh) * 2);
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   color: white !important;
-}
-
-/* TODO : Align items horizontally using flex-properties - try wrapping <a> with a <div> instead */
-a.navbar-brand {
-  padding-top: 3.75%;
 }
 
 .navbar-toggler {
